# ComfyUI-Cadrille

./: README.md  __init__.py  comfy-test.toml  pyproject.toml  requirements.txt
nodes/: __init__.py  cadrecode_nodes.py  cadrille_nodes.py
utils/: __init__.py
utils/cadrecode/: __init__.py  execution.py  inference.py  model.py
utils/cadrille/: __init__.py  inference.py  model.py
utils/shared/: __init__.py  occ_logging.py
workflows/: cadrecode.json  cadrille_image.json  cadrille_mesh.json  cadrille_text.json
