[project]
name = "comfyui-cadrille"
description = "Cadrille: Multi-modal CAD Reconstruction - Originally from ComfyUI-CADabra"
version = "1.0.0"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[project.urls]
Repository = "https://github.com/PozzettiAndrea/ComfyUI-Cadrille"
"Original Project" = "https://github.com/PozzettiAndrea/ComfyUI-CADabra"

[tool.comfy]
PublisherId = "pznodes"
DisplayName = "Cadrille"
Icon = ""
